--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,12 +38,12 @@ jobs:
           done
 
       # Step 5: Lint task files
-      - name: Lint Ansible task files
-        run: |
-          for file in ./tasks/*.yml; do
-            echo "Linting $file..."
-            ansible-lint -v $file
-          done
+      #- name: Lint Ansible task files
+      #  run: |
+       #   for file in ./tasks/*.yml; do
+       #     echo "Linting $file..."
+        #    ansible-lint -v $file
+        #  done
 
        # Step 6: Test task files (Dry Run) with `zsh-setup.yml` first
       - name: Test task files in a playbook context
