--- a/tasks/zsh-setup.yml
+++ b/tasks/zsh-setup.yml
@@ -1,45 +1,45 @@
 ---
-    # Ensure the system is updated
-    - name: Update apt cache and upgrade the system
-      apt:
-        update_cache: true
-    # Install zsh
-    - name: Install Zsh
-      apt:
-        name: zsh
-        state: present
-        update_cache: true
-    - name: Change default shell to Zsh
-      shell: chsh -s $(which zsh)
-      args:
-        executable: /bin/bash  # Ensure the shell used for the command is compatible
-      changed_when: false  # Avoid false positives since `chsh` may not change the shell if it's already set
-    - name: Install Oh My Zsh
-      shell: |
-        curl -Lo install.sh https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh
-        bash install.sh --unattended
-      args:
-        creates: ~/.oh-my-zsh  # Skip if already installed
-      environment:
-        ZSH: "~/.oh-my-zsh"
-    - name: Install Zsh plugin for auto-complete
-      ansible.builtin.git:
-        repo: 'https://github.com/zsh-users/zsh-autosuggestions.git'
-        dest: "~/.oh-my-zsh/plugins/zsh-autosuggestions"
-        update: true
-    - name: Update .zshrc to include autosuggestions
-      lineinfile:
-        path: ~/.zshrc
-        regexp: '^plugins='
-        line: "plugins=(git zsh-autosuggestions)"
-        backrefs: true
-    # Install Nerd Fonts
-    - name: Download and install Nerd Fonts
-      shell: |
-        mkdir -p ~/.local/share/fonts
-        cd ~/.local/share/fonts
-        curl -fLo "FiraCode Nerd Font.ttf" https://github.com/ryanoasis/nerd-fonts/releases/latest/download/FiraCode.zip
-        unzip FiraCode.zip
-        fc-cache -fv
-      args:
-        creates: "~/.local/share/fonts/FiraCode Nerd Font.ttf"  # Skip if already downloaded
+# Ensure the system is updated
+- name: Update apt cache and upgrade the system
+  apt:
+    update_cache: true
+# Install zsh
+- name: Install Zsh
+  apt:
+    name: zsh
+    state: present
+    update_cache: true
+- name: Change default shell to Zsh
+  shell: chsh -s $(which zsh)
+  args:
+    executable: /bin/bash # Ensure the shell used for the command is compatible
+  changed_when: false # Avoid false positives since `chsh` may not change the shell if it's already set
+- name: Install Oh My Zsh
+  shell: |
+    curl -Lo install.sh https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh
+    bash install.sh --unattended
+  args:
+    creates: ~/.oh-my-zsh # Skip if already installed
+  environment:
+    ZSH: "~/.oh-my-zsh"
+- name: Install Zsh plugin for auto-complete
+  ansible.builtin.git:
+    repo: "https://github.com/zsh-users/zsh-autosuggestions.git"
+    dest: "~/.oh-my-zsh/plugins/zsh-autosuggestions"
+    update: true
+- name: Update .zshrc to include autosuggestions
+  lineinfile:
+    path: ~/.zshrc
+    regexp: "^plugins="
+    line: "plugins=(git zsh-autosuggestions)"
+    backrefs: true
+# Install Nerd Fonts
+- name: Download and install Nerd Fonts
+  shell: |
+    mkdir -p ~/.local/share/fonts
+    cd ~/.local/share/fonts
+    curl -fLo "FiraCode Nerd Font.ttf" https://github.com/ryanoasis/nerd-fonts/releases/latest/download/FiraCode.zip
+    unzip FiraCode.zip
+    fc-cache -fv
+  args:
+    creates: "~/.local/share/fonts/FiraCode Nerd Font.ttf" # Skip if already downloaded
